frontend/build_log.txt

> frontend@0.0.0 build
> vite build

[33mYou are using Node.js 20.11.1. Vite requires Node.js version 20.19+ or 22.12+. Please upgrade your Node.js version.[39m
file:///C:/Users/mroy0/Documents/projet/asphaltburn/frontend/node_modules/rolldown/dist/shared/rolldown-build-4YnQkA76.mjs:9
import { formatWithOptions, styleText } from "node:util";
                            ^^^^^^^^^
SyntaxError: The requested module 'node:util' does not provide an export named 'styleText'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:132:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:214:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:329:24)
    at async CAC.<anonymous> (file:///C:/Users/mroy0/Documents/projet/asphaltburn/frontend/node_modules/vite/dist/node/cli.js:764:28)

Node.js v20.11.1
